[gd_scene load_steps=3 format=3 uid="uid://dsaoqf10iwwmr"]

[ext_resource type="Script" path="res://Scenes/ui.gd" id="1_md707"]

[sub_resource type="SystemFont" id="SystemFont_xwxwp"]

[node name="UI" type="CanvasLayer" groups=["ui"]]
script = ExtResource("1_md707")

[node name="ScoreMargin" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.0
offset_right = 34.0
offset_bottom = 42.0
grow_horizontal = 2
theme_override_constants/margin_top = 20

[node name="Score" type="Label" parent="ScoreMargin"]
layout_mode = 2
theme_override_colors/font_color = Color(0.986752, 0.986752, 0.986752, 1)
theme_override_fonts/font = SubResource("SystemFont_xwxwp")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="LifesMargin" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 107.0
grow_vertical = 0
theme_override_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="LifesMargin"]
layout_mode = 2

[node name="Scoretimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Scoretimer" to="." method="_on_scoret_imer_timeout"]
